@@ -163,8 +163,8 @@ cross-references (<a class="reference" href="#example">example</a>), external hy
 (<a class="reference" href="http://www.python.org">Python web site</a>), footnote references
 (manually numbered <a class="footnote-reference" href="#id6" id="id1" name="id1">[1]</a>, anonymous auto-numbered <a class="footnote-reference" href="#id9" id="id2" name="id2">[3]</a>, labeled
 auto-numbered <a class="footnote-reference" href="#label" id="id3" name="id3">[2]</a>, or symbolic <a class="footnote-reference" href="#id10" id="id4" name="id4">[*]</a>), citation references
-(<a class="citation-reference" href="#cit2002" id="id5" name="id5">[CIT2002]</a>), substitution references (<img alt="EXAMPLE" src="../../../docs/user/rst/images/biohazard.png" />), and <a class="target" id="inline-hyperlink-targets" name="inline-hyperlink-targets">inline
-hyperlink targets</a> (see <a class="reference" href="#targets">Targets</a> below for a reference back to here).
+(<a class="citation-reference" href="#cit2002" id="id5" name="id5">[CIT2002]</a>), substitution references (<img alt="EXAMPLE" src="../../../docs/user/rst/images/biohazard.png" />), and <span class="target" id="inline-hyperlink-targets">inline
+hyperlink targets</span> (see <a class="reference" href="#targets">Targets</a> below for a reference back to here).
 Character-level inline markup is also possible (although exceedingly
 ugly!) in <em>re</em><tt class="docutils literal"><span class="pre">Structured</span></tt><em>Text</em>.  Problems are indicated by
 <a href="#id19" name="id20"><span class="problematic" id="id20">|problematic|</span></a> text (generated by processing errors; this one is
@@ -211,7 +211,7 @@ live link to PEP 258 here.</p>
 </ul>
 </div>
 <div class="section" id="enumerated-lists">
-<h2><a class="toc-backref" href="#id33" name="enumerated-lists">2.3&nbsp;&nbsp;&nbsp;<a class="target" id="target" name="target"></a>Enumerated Lists</a></h2>
+<h2><a class="toc-backref" href="#id33" name="enumerated-lists">2.3&nbsp;&nbsp;&nbsp;<span class="target" id="target"></span>Enumerated Lists</a></h2>
 <ol class="arabic">
 <li><p class="first">Arabic numerals.</p>
 <ol class="loweralpha simple">
@@ -490,7 +490,7 @@ citation.</p>
 </div>
 <div class="section" id="targets">
 <h2><a class="toc-backref" href="#id43" name="targets">2.13&nbsp;&nbsp;&nbsp;Targets</a></h2>
-<p><a class="target" id="example" name="example"></a>This paragraph is pointed to by the explicit &quot;example&quot; target. A
+<p><span class="target" id="example"></span>This paragraph is pointed to by the explicit &quot;example&quot; target. A
 reference can be found under <a class="reference" href="#inline-markup">Inline Markup</a>, above. <a class="reference" href="#inline-hyperlink-targets">Inline
 hyperlink targets</a> are also possible.</p>
 <p>Section headers are implicit targets, referred to by name. See
